@@ -1,5 +1,11 @@
 2005-09-30  Corinna Vinschen  <corinna@vinschen.de>
 
+	* fhandler_floppy.cc (fhandler_dev_floppy::get_drive_info): Use
+	fhandler method to access majoer device number.  Add comment to
+	explain floppy weirdness.
+
+2005-09-30  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Also use
 	attributes stored in this->pc if call to GetFileInformationByHandle
 	failed.
